# Dynamic-SLIC-Superpixels-Research

./: .clang-format  .gitignore  README.md
HashTable/: HashTableDemo.cpp  SLICHashTable.hpp
SLIC Demo/: CMakeLists.txt
SLIC Demo/src/: SLICHashTable.hpp  demo.cpp
SuperDuperPixels/: CMakeLists.txt
SuperDuperPixels/src/: demo.cpp  sd_slic.cpp  sd_slic.hpp  sdp_slic.cpp  sdp_slic.hpp  superduperpixel.cpp  superduperpixel.hpp
SuperpixelImageSearch/: CMakeLists.txt
SuperpixelImageSearch/output/csv/: ORB_GLOBAL_1000.csv  ORB_SUPERPIXEL_1000.csv  SIFT_GLOBAL_1000.csv  SIFT_SUPERPIXEL_1000.csv
SuperpixelImageSearch/scripts/: dowload_coco.py
SuperpixelImageSearch/src/: main.cpp  requirements.txt
SuperpixelImageSearch/src/data_pipeline/: coco_opencv_loader.py
SuperpixelImageSearch/src/features/: descriptor_builder.py  sift_orb.py  superpixel_region_features.py
SuperpixelImageSearch/src/retrieval/: index.py  search_example.py
SuperpixelImageSearch/src/superpixels/: slic_opencv.py
include/: preprocessing.hpp
ltridp/: CMakeLists.txt  debug_ltridp.cpp
ltridp/feature/: CMakeLists.txt  feature_extraction.cpp
ltridp/include/: feature_extraction.hpp  preprocessing.hpp
ltridp/preprocessing/: CMakeLists.txt  gamma_transformation.cpp  histogram_reconstruction.cpp  preprocessor.cpp
ltridp/tests/: CMakeLists.txt  test_feature_extraction.cpp  test_preprocessing.cpp  test_with_mri_features.cpp  test_with_mri_samples.cpp
src/ltridp/preprocessing/: CMakeLists.txt  histogram_reconstruction.cpp
